--- a/GymRegistrator/App.xaml
+++ b/GymRegistrator/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="GymRegistrator.App"
+﻿<Application x:Class="GymRegistrator.UI.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:GymRegistrator"
+             xmlns:local="clr-namespace:GymRegistrator.UI"
              Startup="Application_Startup">
     <Application.Resources>
          
