--- a/GymRegistrator/View/GymClientDetailView.xaml
+++ b/GymRegistrator/View/GymClientDetailView.xaml
@@ -15,6 +15,7 @@
             <RowDefinition Height="Auto"></RowDefinition>
             <RowDefinition Height="Auto"></RowDefinition>
             <RowDefinition></RowDefinition>
+            <RowDefinition Height="Auto"></RowDefinition>
         </Grid.RowDefinitions>
         <Label Content="First Name" Margin="10 10 10 0"></Label>
         <TextBox Grid.Row="1" Text="{Binding Client.FirstName, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" 
@@ -27,5 +28,9 @@
         <Label Grid.Row="4" Content="Email" Margin="10 0"></Label>
         <TextBox Grid.Row="5" Text="{Binding Client.Email, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" 
                      Margin="10 0 10 10"></TextBox>
+
+        <StackPanel Grid.Row="7" Orientation="Horizontal">
+            <Button Content="Save" Width="125" Margin="10" Command="{Binding SaveCommand}"></Button>
+        </StackPanel>
     </Grid>
 </UserControl>
