--- a/GymRegistrator/MainWindow.xaml
+++ b/GymRegistrator/MainWindow.xaml
@@ -9,11 +9,20 @@
         Title="GymRegistrator" Height="450" Width="800" FontSize="20"
         WindowStartupLocation="CenterScreen">
     <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"></RowDefinition>
+            <RowDefinition></RowDefinition>
+        </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="200"></ColumnDefinition>
             <ColumnDefinition></ColumnDefinition>
         </Grid.ColumnDefinitions>
-        <view:NavigationView DataContext="{Binding NavigationViewModel}"></view:NavigationView>
-        <view:GymClientDetailView Grid.Column="1" DataContext="{Binding GymClientDetailViewModel}"></view:GymClientDetailView>
+        <Menu Grid.ColumnSpan="2" FontSize="20">
+            <MenuItem Header="Create">
+                <MenuItem Header="New Client" Command="{Binding CreateNewClientCommand}"></MenuItem>
+            </MenuItem>
+        </Menu>
+        <view:NavigationView Grid.Row="1" DataContext="{Binding NavigationViewModel}"></view:NavigationView>
+        <view:GymClientDetailView Grid.Row="1" Grid.Column="1" DataContext="{Binding GymClientDetailViewModel}"></view:GymClientDetailView>
     </Grid>
 </Window>
