--- a/GymRegistrator/MainWindow.xaml
+++ b/GymRegistrator/MainWindow.xaml
@@ -29,6 +29,16 @@
             </MenuItem>
         </Menu>
         <view:NavigationView Grid.Row="1" DataContext="{Binding NavigationViewModel}"></view:NavigationView>
-        <ContentControl Grid.Row="1" Grid.Column="1" Content="{Binding DetailViewModel}"></ContentControl>
+        <TabControl Grid.Row="1" Grid.Column="1" ItemsSource="{Binding DetailViewModels}" SelectedItem="{Binding SelectedDetailViewModel, Mode=TwoWay}">
+            <TabControl.ItemTemplate>
+                <DataTemplate>
+                    <StackPanel Orientation="Horizontal">
+                        <TextBlock Text="{Binding Title}"></TextBlock>
+                        <TextBlock Text="*" Visibility="{Binding HasChanges, Converter={StaticResource booleanToVisibilityConverter}}"></TextBlock>
+                        <Button Command="{Binding CloseDetailViewCommand}" VerticalAlignment="Top" Margin="2" Content="x" FontSize="20"></Button>
+                    </StackPanel>
+                </DataTemplate>
+            </TabControl.ItemTemplate>
+        </TabControl>
     </Grid>
 </Window>
